# ARtracking

./: .gitignore  BUILD_~1.MD  Build_Prompts_SolarStorm_v2.md  Build_Prompts_SolarStorm_v3.md  Makefile  README.md  environment.yml  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
app/: ablation.py  ar_viewer.py  experiments.py  forecast.py  home.py  main.py  reports_page.py  videos.py
configs/: default.yaml
docs/: architecture.md  build_real_dataset.md  modules.md  reproducibility.md
reports/: code_review_2026-06-11.md  final_report.md  report_phase5.md
scripts/: base_rate.py  build_real_dataset.py  build_report.py  check_credentials.py  plot_fulldisk_segmented.py  render_detect_video.py  streamlit_app.py  swansf_list.py
solarflare/: __init__.py  cli.py  config.py  pipeline.py
solarflare/data/: __init__.py  cache.py  goes_events.py  harps.py  jsoc_fetch.py  preprocess.py  sample.py
solarflare/detect/: __init__.py  dataset.py  (+8 more)
tests/: conftest.py  test_ablation.py  test_baselines.py  test_bootstrap.py  test_cache.py  test_cli.py  test_climatology.py  test_config.py  test_dashboard.py  test_dataset.py  test_explog.py  test_features.py  test_foundation.py  test_fulldisk_seg.py  test_goes_events.py  test_harpmap.py  test_harps.py  test_jsoc_fetch.py  test_lstm.py  test_metrics.py  test_pipeline.py  test_preprocess.py  test_propagation.py  test_regionsummary.py  test_sample_hmi.py  test_seed.py  test_segment.py  test_segmenter.py  test_sequences.py  test_swansf.py  test_track.py  test_unet.py  test_validate.py  test_video.py  test_yolo_eval.py
(+27 files in other folders)
